部屋のステータスをsecret_wordsで更新できるようにした
