# src/api/docs/swagger.json
@@ -43,7 +43,7 @@
                 }
             }
         },
-        "/api/v1/rooms/{id}/is_start/{is_start}": {
+        "/api/v1/rooms/{secret_words}/is_start/{is_start}": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -54,9 +54,9 @@
                 "summary": "部屋の状態を更新するAPI",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "room id",
-                        "name": "id",
+                        "type": "string",
+                        "description": "secret_words",
+                        "name": "secret_words",
                         "in": "path",
                         "required": true
                     },
