# src/api/internal/controller/controller.go
@@ -101,13 +101,7 @@ func PostRoom(c *gin.Context) {
 // @Router  /api/v1/players/{id}/status/{status} [post]
 func UpdateRoomIsStart(c *gin.Context) {
 	// パスパラメータ取得
-	id, err := strconv.Atoi(c.Param("id"))
-	if err != nil {
-		c.JSON(400, gin.H{
-			"message": "idが違います",
-		})
-		return
-	}
+	secret_words := c.Param("secret_words")
 	is_start, err := strconv.Atoi(c.Param("is_start"))
 	if err != nil || is_start < 0 || 1 < is_start {
 		c.JSON(400, gin.H{
@@ -117,7 +111,7 @@ func UpdateRoomIsStart(c *gin.Context) {
 	}
 
 	// isstart更新
-	err = room.UpdateIsStart(id, is_start)
+	err = room.UpdateIsStart(secret_words, is_start)
 	if err != nil {
 		c.JSON(500, gin.H{
 			"message": err.Error(),
